<resources>
    <string name="app_name">COVID-19 Tracker</string>
    <string name="title_main_activity">Main</string>
    <string name="app_info_title">
        Android application for tracking the COVID-19 outbreak around the world.
        This application is open source at [https://github.com/itsamirrezah/COVID-19](https://github.com/itsamirrezah/COVID-19)
    </string>

    <string name="app_info_description">
    </string>

    <string name="app_info_developer">
        Amirreza Hajati [@Twitter](https://twitter.com/itsamirrezah) [@Virgool](https://virgool.io/@itsamirrezah)
    </string>

    <string name="app_info_api">
        * [Novel COVID API](https://github.com/NovelCOVID/API)\n
        * [Coronavirus Tracker API](https://github.com/ExpDev07/coronavirus-tracker-api)
    </string>

    <string name="app_info_libraries">
        * [Android Maps Utils](https://github.com/googlemaps/android-maps-utils) Maps SDK for android utility library\n
        * [MPAndroidChart](https://github.com/PhilJay/MPAndroidChart) Powerful android chart view library\n
        * [RxJava2](https://github.com/ReactiveX/RxJava) and [RxAndroid](https://github.com/ReactiveX/RxAndroid) library for composing event-based programs\n
        * [Retrofit2](https://github.com/square/retrofit) Type-safe HTTP client for android\n
        * [MaterialDrawer](https://github.com/mikepenz/MaterialDrawer) The flexbile drawer library for android\n
        * [ThreeTenABP](https://github.com/JakeWharton/ThreeTenABP) An adaptation of the JSR-310 backport for Android\n
    </string>

    <string name="app_info_licence">
            Copyright © 2020 Amirreza Hajati\n\n
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.\n\n

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.\n\n
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see [https://www.gnu.org/licenses](https://www.gnu.org/licenses).
    </string>
</resources>
