<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_bottomsheet_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:alpha="0.95"
    android:minHeight="?attr/actionBarSize"
    app:behavior_hideable="true"
    app:cardBackgroundColor="@color/grey_900"
    app:cardCornerRadius="@dimen/spacing_middle"
    app:cardElevation="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/expand_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:visibility="visible">

        <TextView
            style="@style/AppInfoHeadlines"
            android:fontFamily="sans-serif-black"
            android:text="COVID-19 Tracker"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAppInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/grey_400"
            tools:text="@string/app_info_title" />

        <TextView
            android:id="@+id/tvAppInfoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:lineSpacingExtra="-8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/grey_400"
            tools:text="@string/app_info_description" />


        <TextView
            style="@style/AppInfoHeadlines"
            android:fontFamily="sans-serif-black"
            android:text="Developer" />

        <TextView
            android:id="@+id/tvDeveloper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="-8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/grey_400"
            tools:text="@string/app_info_developer" />

        <TextView
            style="@style/AppInfoHeadlines"
            android:fontFamily="sans-serif-black"
            android:text="Libraries" />

        <TextView
            android:id="@+id/tvLibraries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/grey_400"
            tools:text="@string/app_info_libraries" />

        <TextView
            style="@style/AppInfoHeadlines"
            android:fontFamily="sans-serif-black"
            android:text="License" />

        <TextView
            android:id="@+id/tvLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/grey_400"
            tools:text="@string/app_info_licence" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</com.google.android.material.card.MaterialCardView>
